Fix the flashing test and simplify the fix