@@ -31,7 +31,9 @@ import java.awt.Color
 import java.awt.Graphics
 import java.awt.Point
 import java.awt.event.*
+import java.io.File
 import java.util.concurrent.Semaphore
+import java.util.concurrent.TimeUnit
 import java.util.concurrent.atomic.AtomicBoolean
 import javax.swing.Box
 import javax.swing.JComponent
@@ -50,6 +52,7 @@ import kotlin.test.assertNotNull
 import kotlin.test.assertNull
 import kotlin.test.assertTrue
 import kotlin.time.Duration
+import kotlin.time.Duration.Companion.seconds
 
 @Suppress("SameParameterValue")
 class SkiaLayerTest {
@@ -1134,9 +1137,12 @@ class SkiaLayerTest {
         val bgColor = Color.GREEN
         val fgColor = Color.BLACK
 
-        // Put up a large green window, and then repeatedly show a smaller black window on top of it while
-        // screenshotting the pixel at the center, making sure that pixel is always either black (the
-        // window's content) or green (the background window) - never a flash of some other color.
+        // The first-show flash only reproduces on the very FIRST window displayed in a process. This test's
+        // own JVM warmed that up long ago (earlier tests showed windows), so instead each run spawns a
+        // fresh JVM (FirstShowFlashHarness) whose single black Metal window is genuinely its first. We keep a
+        // large green background window here to provide a known reference color behind the child's window,
+        // then screenshot the center pixel while the child shows, making sure it is always either black (the
+        // child's content) or green (this background) - never a flash of some other color.
 
         val backgroundWindow = JFrame().also {
             it.size = Dimension(1000, 1000)
@@ -1150,52 +1156,81 @@ class SkiaLayerTest {
         val pixelLocation = backgroundWindow.bounds.let {
             Point(it.x + it.width / 2, it.y + it.height / 2)
         }
-        val nonBlackPixelDetected = AtomicReference<Color?>(null)
-        val stopThread = AtomicBoolean(false)
-        val semaphore = Semaphore(0, true)
+        // The child harness hard-codes its window bounds to cover this pixel (the background window's center).
 
+        val flashPixelDetected = AtomicReference<Color?>(null)
+        val lastPixelColorDetected = AtomicReference<Color?>(null)
+        val stopThread = AtomicBoolean(false)
+
+        // Sample continuously (never stops on detection, so every run is still checked) and latch the first
+        // pixel that is neither the background nor the content color.
         val t = thread {
             val robot = Robot()
-            while (!stopThread.get()) {
-                val pixel = robot.getPixelColor(pixelLocation.x, pixelLocation.y)
-                if (!pixel.closeTo(fgColor) && !pixel.closeTo(bgColor)) {
-                    nonBlackPixelDetected.store(pixel)
-                    return@thread
+            try {
+                while (!stopThread.get()) {
+                    val pixel = robot.getPixelColor(pixelLocation.x, pixelLocation.y)
+                    lastPixelColorDetected.store(pixel)
+                    if (!pixel.closeTo(fgColor) && !pixel.closeTo(bgColor)) {
+                        flashPixelDetected.compareAndSet(null, pixel)
+                    }
                 }
-                semaphore.release()
+            } catch (e: Exception) {
+                e.printStackTrace()
             }
         }
-        // Wait for the thread to start reading pixels
-        semaphore.acquire()
+
+        suspend fun waitForSampledPixelCloseTo(targetColor: Color) {
+            do {
+                delay(200)
+            } while (!lastPixelColorDetected.load().let { it != null && it.closeTo(targetColor) })
+        }
+
+        // Build the command that launches a child JVM running FirstShowFlashHarness, forwarding this JVM's
+        // classpath, every skiko.* system property (notably skiko.library.path, which is how the native
+        // library is located), and the same --add-opens the test task uses.
+        val javaExe = File(System.getProperty("java.home"), "bin${File.separator}java").absolutePath
+        val childCommand = buildList {
+            add(javaExe)
+            add("-cp")
+            add(System.getProperty("java.class.path"))
+            System.getProperties().stringPropertyNames()
+                .filter { it.startsWith("skiko.") }
+                .forEach { add("-D$it=${System.getProperty(it)}") }
+            add("--add-opens")
+            add("java.desktop/sun.font=ALL-UNNAMED")
+            add(FirstWindowShowFlashHelper::class.java.name)
+            add(renderApi.name)
+            add(fgColor.rgb.toString())
+        }
 
         try {
-            repeat(50) { testRun ->
-                delay(50)
-                lateinit var renderDelegate: SolidColorRenderer
-                val window = UiTestWindow {
-                    size = Dimension(600, 600)
-                    location = Point(400, 400)
-                    background = Color.WHITE
-                    renderDelegate = SolidColorRenderer(
-                        layer = layer,
-                        color = fgColor,
-                    )
-                    layer.renderDelegate = renderDelegate
-                    contentPane.add(layer, BorderLayout.CENTER)
-                }
+            repeat(20) { testRun ->
+                // Wait until the sampled pixel shows the (green) background before launching the child.
+                waitForSampledPixelCloseTo(bgColor)
 
+                val child = ProcessBuilder(childCommand)
+                    .redirectErrorStream(true)
+                    .redirectOutput(ProcessBuilder.Redirect.INHERIT)
+                    .start()
                 try {
-                    window.isVisible = true
-                    window.waitUntilOpened()
-                    delay(100)
-                    assertNull(nonBlackPixelDetected.load(), "Detected a non-black pixel on window show in run ${testRun + 1}.")
+                    // Wait for the child's black content to reach the screen
+                    val contentShown = withTimeoutOrNull(30.seconds) {
+                        waitForSampledPixelCloseTo(fgColor)
+                        true
+                    } ?: false
+                    assertNull(
+                        flashPixelDetected.load(),
+                        "Detected a flash (neither background nor content color) on first show in run ${testRun + 1}."
+                    )
+                    assertTrue(contentShown, "Child window content never appeared in run ${testRun + 1}.")
                 } finally {
-                    stopThread.getAndSet(true)
-                    t.join()
-                    window.dispose()
+                    child.destroy()
+                    if (!child.waitFor(5, TimeUnit.SECONDS)) child.destroyForcibly()
                 }
             }
         } finally {
+            stopThread.getAndSet(true)
+            t.join()
             backgroundWindow.dispose()
         }
     }
